fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ body {
 }
 
 ul {
+    max-height: calc(100vh - 230px);
     min-height: calc(100vh - 230px);
 }
 
